fixed animation z-index bug

--- a/css/start-animation.css
+++ b/css/start-animation.css
@@ -39,6 +39,7 @@
     top: 64px;
     left: 64px;
     transform: translate(0, 0) scale(1);
+    z-index: 0;
   }
 }
 
